--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,22 @@
   box-shadow: 0 0 10px gray;
   background-color: white;
 }
+.transaction-list{
+  padding: 0px;
+  margin: 0px;
+}
+
+.transaction-list li{
+  display: flex;
+  justify-content: space-between;
+  margin: 5px 0;
+  padding: 10px 5px;
+  box-shadow: 0 0 10px gray;
+  background-color: white;
+}
+
+.transaction-form input{
+  width: 100%;
+  margin: 10px 0;
+  padding: 5px 0;
+}
